# silmaril

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README_RU.md  app.py  playground.py  pyproject.toml  silmaril.yml  start.sh
.github/workflows/: keepalive.yml
docs/: Advanced formatting syntax.md  Basic formatting syntax.md  Welcome.md
docs/notes/: Math Cheatsheet.md  Meeting Notes.md  Python Snippets.md  Reading List.md  notes_base.base
docs/projects/: Course Website.md  Home Automation.md  Research Paper.md  Silmaril.md  project_base.base
docs/resources/: Cheat Sheet PDF.md  Sample Image.md  resources_base.base
silmaril/: __init__.py
silmaril/static/: script.js  style.css
vault_viewer/: __init__.py
vault_viewer/static/: script.js  style.css
