[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silmaril"
version = "0.1.1"
description = "Self-hosted, mobile-first web UI for browsing and editing Obsidian vaults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Daniil Merkulov", email = "bratishka.mipt@gmail.com" },
]
keywords = ["obsidian", "vault", "viewer", "markdown", "notes", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-frontmatter>=1.0.0",
    "markdown>=3.4",
    "pyyaml>=6.0",
    "python-multipart>=0.0.5",
]

[project.urls]
Homepage = "https://github.com/MerkulovDaniil/silmaril"
Repository = "https://github.com/MerkulovDaniil/silmaril"

[project.scripts]
silmaril = "silmaril:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["silmaril*"]

[tool.setuptools.package-data]
silmaril = ["static/*"]
